<resources>
    <string name="app_name">ZX Emulator</string>
    <string name="form_settings">Настройки</string>
    <string name="settings_system">SYSTEM</string>
    <string name="settings_border">BORDER</string>
    <string name="settings_dark_theme">Dark theme</string>
    <string name="settings_gs_reset">GS reset</string>
    <string name="settings_tape_reset">Tape reset</string>
    <string name="settings_joystick">JOYSTICK</string>
    <string name="settings_keyboard">KEYBOARD</string>
    <string name="settings_swap_mouse_buttons">Swap mouse buttons</string>
    <string name="settings_giga_screen">Giga screen</string>
    <string name="settings_trap_tr_dos">Trap TR-DOS</string>
    <string name="settings_show_fps">Show FPS</string>
    <string name="settings_auto_tape">Tape</string>
    <string name="msg_error">Error</string>
    <string name="msg_warning">Warning</string>
    <string name="failedSave">Failed Saving - \n%s!</string>
    <string name="failedLoad">Failed Loading - \n%s!</string>
    <string name="qLoad">Quick Loading\n</string>
    <string name="qSave">Quick Saving\n</string>
    <string name="browser_flt">Snapshot|Tape|Network|Disk A:|Disk B:|Disk C:|Disk D:</string>
    <string name="disks" translatable="false">A:|B:|C:|D:</string>
    <string name="bp_ops">SKIP|EXECUTE|READ MEMORY|WRITE MEMORY|READ PORT|WRITE PORT</string>
    <string name="bp_ops2" translatable="false">SKIP|EXEC|RMEM|WMEM|RPORT|WPORT</string>
    <string name="bp_cond" translatable="false">==|&lt;&gt;|&lt;|&gt;|&lt;=|&gt;=</string>
    <string name="joy_names" translatable="false">KEMPSTON|SINCLAIR I|SINCLAIR II|CURSOR|CUSTOM</string>
    <string name="key_names2" translatable="false">1|2|3|4|5|6|7|8|9|0|Q|W|E|R|T|Y|U|I|O|P|A|S|D|F|G|H|J|K|L|ENTER|CAPS|Z|X|C|V|B|N|M|SYMBOL|SPACE|EXT|DEL|UP|DOWN|LEFT|RIGHT|KLEFT|KUP|KRIGHT|KDOWN|KFIRE|N/A</string>
    <string name="key_names" translatable="false">1|2|3|4|5|6|7|8|9|0|Q|W|E|R|T|Y|U|I|O|P|A|S|D|F|G|H|J|K|L|ENTER\biconZxOk|CAPS\biconZxShiftPress|Z|X|C|V|B|N|M|SYMBOL\biconZxSymPress|SPC|EXT|DEL\biconZxDelete|UP\biconZxArrowUp|DOWN\biconZxArrowDown|LEFT\biconZxArrowLeft|RIGHT\biconZxArrowRight|KLEFT\biconZxKArrowLeft|KUP\biconZxKArrowUp|KRIGHT\biconZxKArrowRight|KDOWN\biconZxKArrowDown|KFIRE\biconZxKFire|N/A</string>
    <string name="palette_asm" translatable="false">Custom|Lighting|Darkest</string>
    <string name="palette_speccy" translatable="false">Custom|sshEmu|Z80Stealth|White/Black|Strange|ElectroScale|JPP|RealSpec</string>
    <string name="formBrowser">Files browser</string>
    <string name="download">Download succeeded\n</string>
    <string name="netNotFound">Failed to Connect</string>
    <string name="formPokes">Pokes</string>
    <string name="formSelFile">Choice file</string>
    <string name="formBpList">Break points</string>
    <string name="zip" translatable="false">zip</string>
    <string name="settings_chip">Chip</string>
    <string name="settings_channels">Channels</string>
    <string name="settings_frequency">Frequency</string>
    <string name="settings_beeper">Beeper</string>
    <string name="settings_covox">Covox</string>
    <string name="settings_ay" translatable="false">AY</string>
    <string name="settings_gs" translatable="false">General sound</string>
    <string name="settings_left">Left</string>
    <string name="settings_right">Right</string>
    <string name="settings_down">Down</string>
    <string name="settings_up">Up</string>
    <string name="settings_y" translatable="false">Y</string>
    <string name="settings_x" translatable="false">X</string>
    <string name="settings_a" translatable="false">A</string>
    <string name="settings_b" translatable="false">B</string>
    <string name="settings_palettes">Palettes:</string>
    <string name="settings_asm_colors">Assembler colors</string>
    <string name="settings_black">black</string>
    <string name="settings_blue">blue</string>
    <string name="settings_red">red</string>
    <string name="settings_purple">purple</string>
    <string name="settings_green">green</string>
    <string name="settings_cyan">cyan</string>
    <string name="settings_yellow">yellow</string>
    <string name="settings_white">white</string>
    <string name="settings_brblack">br.\nblack</string>
    <string name="settings_brblue">br.\nblue</string>
    <string name="settings_brred">br.\nred</string>
    <string name="settings_brpurple">br.\npurple</string>
    <string name="settings_brgreen">br.\ngreen</string>
    <string name="settings_brcyan">br.\ncyan</string>
    <string name="settings_bryellow">br.\nyellow</string>
    <string name="settings_brwhite">br.\nwhite</string>
    <string name="settings_backgrnd">backgrnd</string>
    <string name="settings_selection">selection</string>
    <string name="settings_text">text</string>
    <string name="settings_number">number</string>
    <string name="settings_string">string</string>
    <string name="settings_splitters">splitters</string>
    <string name="settings_comment">comment</string>
    <string name="settings_operators">operators</string>
    <string name="settings_commands">commands</string>
    <string name="settings_flags">flags</string>
    <string name="settings_labels">labels</string>
    <string name="settings_bkgrnd_lines">bkgrnd\nlines</string>
    <string name="settings_number_lines">number\nlines</string>
    <string name="settings_current_lines">cur\nlines</string>
    <string name="settings_name">Name</string>
    <string name="settings_type">Type</string>
    <string name="settings_address">Address</string>
    <string name="settings_size">Size</string>
    <string name="settings_nsectors">#</string>
    <string name="settings_fsector">Sector</string>
    <string name="settings_track">Track</string>
    <string name="settings_registers">registers</string>
    <string name="settings_presets">Presets</string>
    <string name="settings_layout">Layout</string>
    <string name="choice_select_file">Select file:</string>
    <string name="bp_value">Value</string>
    <string name="bp_mask">Mask</string>
    <string name="bp_condition">Condition</string>
    <string name="bp_address1">Address1</string>
    <string name="bp_address2">Address2</string>
    <string name="bp_access">Access</string>
    <string name="tzxLevel">level:</string>
    <string name="tzxIndex">index:</string>
    <string name="tzxCount">count:</string>
    <string name="tzxBits">bits:</string>
    <string name="tzxSize">size:</string>
    <string name="tzxStop">stop</string>
    <string name="tzxPilot">pilot:</string>
    <string name="tzxName">name:</string>
    <string name="tzxLine">exec:</string>
    <string name="tzxAddress">address:</string>
    <string name="tzxDelete">delete</string>
    <string-array name="tzxArchive">
        <item>Title:</item>
        <item>Publisher:</item>
        <item>Author:</item>
        <item>Year:</item>
        <item>Language:</item>
        <item>Type:</item>
        <item>Price:</item>
        <item>Protection:</item>
        <item>Origin:</item>
        <item>Comment:</item>
        <item>Info:</item>
    </string-array>
</resources>
