<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:z="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp" android:layout_height="300dp"
    z:styles="@style/form" android:text="@string/formBpList"
    z:styleCaption="@style/formCaption"
    z:gravity="center" z:formMode="none" z:modal="true"
    z:typeView="zFormBpList" z:nameView="bplist" z:styleFooter="@style/formFooter">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        z:pad="3dp" android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bp_address1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bp_address2"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/bpEditRange1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/bpEdit" />
                <EditText
                    android:id="@+id/bpEditRange2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/bpEdit"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bp_value" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bp_mask" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/bpEditValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/bpEdit"/>
                <EditText
                    android:id="@+id/bpEditMask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/bpEdit"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bp_condition" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/bpSpinOps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:adapterData="@string/bp_ops"
                    z:styles="@style/spinner" />
                <Spinner
                    android:id="@+id/bpSpinCond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    z:adapterData="@string/bp_cond"
                    z:styles="@style/spinner"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/diskHeadText"
                    android:text="@string/bp_address1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/diskHeadText"
                    android:text="@string/bp_address2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/diskHeadText"
                    android:text="@string/bp_value"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/diskHeadText"
                    android:text="@string/bp_mask"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/diskHeadText"
                    android:text="@string/bp_condition"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    z:styles="@style/diskHeadText"
                    android:text="@string/bp_access"/>
            </LinearLayout>
            <ListView
                android:id="@+id/bpList"
                z:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                z:styles="@style/setRibbon"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
